// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` Property  Property can create a listing, frequency weekly and multiple days per week 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "city": "Berlin",
        "daySlots": Array [
          Object {
            "endTime": 2022-07-02T12:00:00.003Z,
            "startTime": 2022-07-02T09:00:00.003Z,
          },
          Object {
            "endTime": 2022-07-02T13:00:00.003Z,
            "startTime": 2022-07-02T07:00:00.003Z,
          },
        ],
        "deposit": 2,
        "description": "user1-listing",
        "facilities": Array [
          "Unfurnished",
        ],
        "frequency": "WEEKLY",
        "handle": "prop_title_a4859a",
        "hourlyPrice": 12,
        "images": Array [
          "test-image-url",
        ],
        "isVerified": false,
        "kind": "property",
        "owner": Object {
          "dob": null,
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [
          "rule-1",
          "rule-2",
        ],
        "serviceFee": 5,
        "size": 123,
        "street": "sample-street",
        "streetNumber": "23",
        "title": "prop title",
        "zip": 1355,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing city string arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "City name Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean mm is invalid, must have a max length of 50 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing descriptiosn arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "Description Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nsdfsfsfsdfsdf is invalid, must have a max length of 1000 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing street arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "Street name Lorem ipsum dolor sit amet, consectetsuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean mm is invalid, must have a max length of 50 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when a listing zip code arg out of max range 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "Zip code 123456 is invalid, must have a max length of 5 characters.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when availableDays is empty 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": Object {
        "message": "List argument availableDays must not be empty.",
      },
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": null,
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when startDate is after endDate 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "city": "Berlin",
        "daySlots": Array [
          Object {
            "endTime": 2022-05-27T11:00:51.063Z,
            "startTime": 2022-05-27T08:00:51.063Z,
          },
          Object {
            "endTime": 2022-06-03T11:00:51.063Z,
            "startTime": 2022-06-03T08:00:51.063Z,
          },
          Object {
            "endTime": 2022-06-17T11:00:51.063Z,
            "startTime": 2022-06-17T08:00:51.063Z,
          },
          Object {
            "endTime": 2022-06-10T11:00:51.063Z,
            "startTime": 2022-06-10T08:00:51.063Z,
          },
          Object {
            "endTime": 2022-05-20T11:00:51.063Z,
            "startTime": 2022-05-20T08:00:51.063Z,
          },
          Object {
            "endTime": 2022-06-24T11:00:51.063Z,
            "startTime": 2022-06-24T08:00:51.063Z,
          },
        ],
        "deposit": 2,
        "description": "user1-listing",
        "facilities": Array [
          "Unfurnished",
        ],
        "frequency": "WEEKLY",
        "handle": "prop_title_b75cd4",
        "hourlyPrice": 12,
        "images": Array [
          "test-image-url",
        ],
        "isVerified": false,
        "kind": "property",
        "owner": Object {
          "dob": null,
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [
          "rule-1",
          "rule-2",
        ],
        "serviceFee": 5,
        "size": 123,
        "street": "sample-street",
        "streetNumber": "23",
        "title": "prop title",
        "zip": 1355,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property  Property it fails when wrong DateTime format 1`] = `
Object {
  "data": undefined,
  "errors": Array [
    [UserInputError: Variable "$startDate" got invalid value "2022-05-15T16:051.0"; Expected type DateTime. DateTime cannot represent an invalid date-time-string 2022-05-15T16:051.0.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property can create a listing, frequency monthly 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "city": "Berlin",
        "daySlots": Array [
          Object {
            "endTime": 2022-07-01T11:00:00.003Z,
            "startTime": 2022-07-01T08:00:00.003Z,
          },
        ],
        "deposit": 2,
        "description": "user1-listing",
        "facilities": Array [
          "Unfurnished",
        ],
        "frequency": "MONTHLY",
        "handle": "prop_title_2cfdd8",
        "hourlyPrice": 12,
        "images": Array [
          "test-image-url",
        ],
        "isVerified": false,
        "kind": "property",
        "owner": Object {
          "dob": null,
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [
          "rule-1",
          "rule-2",
        ],
        "serviceFee": 5,
        "size": 123,
        "street": "sample-street",
        "streetNumber": "23",
        "title": "prop title",
        "zip": 1355,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property can create a listing, frequency none 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "city": "Berlin",
        "daySlots": Array [
          Object {
            "endTime": 2022-07-01T11:00:00.003Z,
            "startTime": 2022-07-01T08:00:00.003Z,
          },
        ],
        "deposit": 2,
        "description": "user1-listing",
        "facilities": Array [
          "Unfurnished",
        ],
        "frequency": "NONE",
        "handle": "prop_title_62746b",
        "hourlyPrice": 12,
        "images": Array [
          "test-image-url",
        ],
        "isVerified": false,
        "kind": "property",
        "owner": Object {
          "dob": null,
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [
          "rule-1",
          "rule-2",
        ],
        "serviceFee": 5,
        "size": 123,
        "street": "sample-street",
        "streetNumber": "23",
        "title": "prop title",
        "zip": 1355,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[` Property can create a listing, frequency weekly 1`] = `
Object {
  "data": Object {
    "createListing": Object {
      "ClientErrorInvalidInput": null,
      "ClientErrorUserNotExists": null,
      "NoAvailableSlots": null,
      "Property": Object {
        "city": "Berlin",
        "daySlots": Array [
          Object {
            "endTime": 2022-07-01T11:00:00.003Z,
            "startTime": 2022-07-01T08:00:00.003Z,
          },
        ],
        "deposit": 2,
        "description": "user1-listing",
        "facilities": Array [
          "Unfurnished",
        ],
        "frequency": "WEEKLY",
        "handle": "prop_title_f22c2c",
        "hourlyPrice": 12,
        "images": Array [
          "test-image-url",
        ],
        "isVerified": false,
        "kind": "property",
        "owner": Object {
          "dob": null,
        },
        "partialSpace": false,
        "pickup": false,
        "rules": Array [
          "rule-1",
          "rule-2",
        ],
        "serviceFee": 5,
        "size": 123,
        "street": "sample-street",
        "streetNumber": "23",
        "title": "prop title",
        "zip": 1355,
      },
      "UnknownError": null,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
